* New screens in Settings
* Notifications
* New themes
* Favorite matches
* Faster image animations
* Lots of code refactors
* Upgrade dependencies