@@ -1,7 +1,7 @@
 name: balun
 description: "Simple Flutter application for football scores."
 publish_to: 'none'
-version: 2.0.1+201
+version: 2.0.2+202
 
 #
 # DEPLOYING APP
